Adiciona favicon (ícone da aba)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tennis Bet Analyzer - Análise de Apostas por Elo</title>
+    <title>ECE ELO Analyzer</title>
+    
+    <link rel="icon" href="/logo.jpeg" />
+
     <meta name="description" content="Análise profissional de apostas em tênis baseada em Elo Rating do Tennis Abstract. Calcule probabilidades e valor esperado para apostas inteligentes." />
     <meta name="author" content="Tennis Bet Analyzer" />
 
