--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECE ELO Analyzer</title>
     
-    <link rel="icon" href="/logo.jpeg" />
+    <link rel="icon" href="/public/logo.jpeg" />
 
     <meta name="description" content="Análise profissional de apostas em tênis baseada em Elo Rating do Tennis Abstract. Calcule probabilidades e valor esperado para apostas inteligentes." />
     <meta name="author" content="Tennis Bet Analyzer" />
